k8s/nginx-test/03-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-ingressroute
  namespace: nginx-test
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nginx.localhost`) # We will use this hostname for testing
      kind: Rule
      services:
        - name: nginx-service
          port: 80
